--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<head><script defer src="main.js"></script></head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <button class="home">Home</button>
+            <button class="menu">Menu</button>
+            <button class="about">About</button>
+        </nav>
+    </header>
+    <div id="content">
+    </div>
+</body>
+
+</html>
